# aionexblue

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
aionexblue/: __init__.py  auth.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_client.py
tests/fixtures/: charger_detail.json  charger_list.json  charger_status.json  consumption_aggregate.json  login_response.json  refresh_response.json  schedule_detail.json  sessions.json
