[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aionexblue"
version = "0.1.0"
description = "Async Python client for the NexBlue EV charger cloud API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Kim de Vos" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/kimdv/aionexblue"
Repository = "https://github.com/kimdv/aionexblue"
Issues = "https://github.com/kimdv/aionexblue/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "aioresponses>=0.7",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]
